Added: Card answer reader

--- a/public/new.html
+++ b/public/new.html
@@ -51,6 +51,8 @@
         <button value="Submit" onclick="submitAnswer()" id="submitAnswer">Submit</button>
 
         <h3>Total answers in pool: <span id="numAnswers"></span></h3>
+
+        <button onclick="window.location.href='/read?gameId=' + gameId">Read Answers</button>
     </div>
 
     <script>
