--- a/public/new.html
+++ b/public/new.html
@@ -40,8 +40,8 @@
     <div class="middle">
         <a href="/">Back</a>
         <h1>Let others join</h1>
-        <p>Code: <span id="gameIdCode"></span></p>
-        <img id="gameQR" /> <br>
+        <p>Code: <span id="gameIdCode" class="gameIdCode"></span></p>
+        <img id="gameQR" class="gameQR" /> <br>
 
         <h4>Set question <span style="color:gray">(optional)</span></h3>
         <input type="text" name="question" id="question" required>
@@ -54,6 +54,15 @@
         <h3>Total answers in pool: <span id="numAnswers"></span></h3>
 
         <button onclick="window.location.href='/read?gameId=' + gameId">Read Answers</button>
+
+        <hr>
+        <h2>How to play</h2>
+        <p>At the beginning of the game, a question is asked and everyone must join with the code and answer the question in the form (either truthfully or not).</p>
+        <p>Once everyone is done, the person who created the game will start the game and all words will get displayed two times, after which they will disappear forever.</p>
+        <p>Everyone starts as the head of their Empire. Players will go around one by one guessing who answered the question with what answer. If they guess correctly, the guessed player and their Empire will secede and join the guesser's Empire. Their job now is to help the head of the Empire guess the remaining answers. The guesser can guess as often as they guess correctly.</p>
+        <p>The winner of the game is the head of the last Empire.</p>
+        <p style="color: gray;">Hint: Competing Empires will not want to share the words, since words are only displayed once at the very beginning. Every Empire should collaborate internally to remember the answers themselves!</p>
+
     </div>
 
     <script>
